# vmcrec

./: .gitmodules  CMakeLists.txt  README.md
include/: VMC.Marionette_generated.h  VMCPacketListener.hpp
schema/: VMC.Marionette.fbs
src/: VMCPacketListener.cpp  main.cpp
